src/objects/Emoji__c.object
<CustomObject>
    <fields>
        <fullName>AddeProp__c</fullName>
        <label>AddeProp</label>
        <referenceTo>AddeProp__c</referenceTo>
        <relationshipLabel>Emojis</relationshipLabel>
        <relationshipName>Emojis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Character__c</fullName>
        <inlineHelpText>The unicode character for the emoji</inlineHelpText>
        <label>Character</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type of emoji</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Emoji</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Emojis</fullName>
        <columns>AddeProp__c</columns>
        <columns>NAME</columns>
        <columns>Character__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Emojis</label>
    </listViews>
    <nameField>
        <displayFormat>em{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Emoji Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emojis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>